alignment fix

--- a/css/article.sass
+++ b/css/article.sass
@@ -141,3 +141,7 @@ a#home-link
   font-style: italic
 .blue
   color: blue
+ul
+  text-align: left
+ol
+  text-align: left
